Notebooks 2a and 2b finalized. No more gridsearches need to be performed.

--- a/notebooks/2b_MLmodels_PTBDB.ipynb
+++ b/notebooks/2b_MLmodels_PTBDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "5ee4ebc0",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "ed72fbf6",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "a63a020a",
    "metadata": {
     "execution": {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 43,
    "id": "eb7976fd",
    "metadata": {
     "execution": {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "b47f4078",
    "metadata": {
     "execution": {
@@ -189,19 +189,19 @@
     "#Switches for the user to define which sample method is used and which models are run.\n",
     "class Config:\n",
     "    oversample = False #refers to PTBDB B_SMOTE\n",
-    "    undersample = True #Refers to undersampling with random undersampler\n",
+    "    undersample = False #Refers to undersampling with random undersampler\n",
     "    sample_name = \"UNDEFINED_SAMPLE\"\n",
     "\n",
-    "Train_SVM =  True #trains the SVM Model without Gridsearch\n",
-    "Train_KNN = True #trains the KNN Model without Gridsearch\n",
-    "Train_DTC = True #trains the DTC Model without Gridsearch\n",
-    "Train_RF = True #trains the RF Model without Gridsearch\n",
-    "Train_XGB = True #trains the XGB Model without Gridsearch"
+    "Train_SVM =  False #trains the SVM Model without Gridsearch\n",
+    "Train_KNN = False #trains the KNN Model without Gridsearch\n",
+    "Train_DTC = False #trains the DTC Model without Gridsearch\n",
+    "Train_RF = False #trains the RF Model without Gridsearch\n",
+    "Train_XGB = False #trains the XGB Model without Gridsearch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 45,
    "id": "cd5480da",
    "metadata": {
     "execution": {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "id": "76f8e1da",
    "metadata": {
     "execution": {
@@ -250,7 +250,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample Name: PTBDB_C_RUS\n"
+      "Using the original PTBDB dataset\n",
+      "Sample Name: PTBDB_A_Original\n"
      ]
     }
    ],
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "id": "cf34119c",
    "metadata": {},
    "outputs": [],
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "id": "45018274",
    "metadata": {
     "execution": {
@@ -325,10 +326,10 @@
     {
      "data": {
       "text/plain": [
-       "(6482, 187)"
+       "(11641, 187)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "id": "563b6a4b",
    "metadata": {},
    "outputs": [
@@ -364,17 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0     0.6893    0.9342    0.7932       805\n",
-      "         1.0     0.9709    0.8390    0.9002      2106\n",
-      "\n",
-      "    accuracy                         0.8653      2911\n",
-      "   macro avg     0.8301    0.8866    0.8467      2911\n",
-      "weighted avg     0.8930    0.8653    0.8706      2911\n",
-      "\n",
-      "The model was saved as SVM_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as SVM_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "SVM Model withoud gridsearch is not trained\n"
      ]
     }
    ],
@@ -404,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "id": "ece6adb9",
    "metadata": {},
    "outputs": [
@@ -412,17 +403,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0     0.6919    0.9540    0.8021       805\n",
-      "         1.0     0.9795    0.8376    0.9030      2106\n",
-      "\n",
-      "    accuracy                         0.8698      2911\n",
-      "   macro avg     0.8357    0.8958    0.8525      2911\n",
-      "weighted avg     0.8999    0.8698    0.8751      2911\n",
-      "\n",
-      "The model was saved as KNN_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as KNN_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "KNN Model without gridsearch is not trained.\n"
      ]
     }
    ],
@@ -451,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "id": "a3219cb8",
    "metadata": {},
    "outputs": [
@@ -459,17 +440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0     0.7564    0.9106    0.8264       805\n",
-      "         1.0     0.9629    0.8879    0.9239      2106\n",
-      "\n",
-      "    accuracy                         0.8942      2911\n",
-      "   macro avg     0.8597    0.8992    0.8751      2911\n",
-      "weighted avg     0.9058    0.8942    0.8969      2911\n",
-      "\n",
-      "The model was saved as DTC_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as DTC_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "Decision Tree Model without gridsearch is not trained.\n"
      ]
     }
    ],
@@ -498,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 52,
    "id": "e063687d",
    "metadata": {},
    "outputs": [
@@ -506,17 +477,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0     0.8624    0.9652    0.9109       805\n",
-      "         1.0     0.9861    0.9411    0.9631      2106\n",
-      "\n",
-      "    accuracy                         0.9478      2911\n",
-      "   macro avg     0.9242    0.9532    0.9370      2911\n",
-      "weighted avg     0.9519    0.9478    0.9486      2911\n",
-      "\n",
-      "The model was saved as RFC_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as RFC_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "Random Forest Model without gridsearch is not trained.\n"
      ]
     }
    ],
@@ -545,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "id": "ed7698c3",
    "metadata": {},
    "outputs": [
@@ -553,17 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "         0.0     0.9106    0.9739    0.9412       805\n",
-      "         1.0     0.9898    0.9634    0.9764      2106\n",
-      "\n",
-      "    accuracy                         0.9663      2911\n",
-      "   macro avg     0.9502    0.9687    0.9588      2911\n",
-      "weighted avg     0.9679    0.9663    0.9667      2911\n",
-      "\n",
-      "The model was saved as XGB_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as XGB_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "XBG Model without gridsearch is not trained.\n"
      ]
     }
    ],
@@ -580,6 +531,299 @@
     "    save_model_and_report(model, report, model_filename, report_filename)\n",
     "else:\n",
     "    print(\"XBG Model without gridsearch is not trained.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6479ca80",
+   "metadata": {},
+   "source": [
+    "# Gridsearch Section"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f86acb9",
+   "metadata": {},
+   "source": [
+    "Gridsearches were only performed for the Mitbih Dataset in our reports. For further testing (if the jury wants or the project is continued) we include the code to theoretically perform gridsearches on the PTBDB Dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "492dd946",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#necessary imports\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn import neighbors\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import xgboost as xgb\n",
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "78d916ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Dataset that is used for the gridsearch: PTBDB_A_Original\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Configuration switches / Paramgrids\n",
+    "Gridsearch_SVM = False # (Done by Hakan?)\n",
+    "Gridsearch_KNN = False # (Done by Alex)\n",
+    "Gridsearch_DTC = False # (Done by Alex)\n",
+    "Gridsearch_RFC = False # (Done by Simon)\n",
+    "Gridsearch_XGB = False # (Done by Hakan)\n",
+    "\n",
+    "#print the current dataset that is in usage:\n",
+    "print(\"Current Dataset that is used for the gridsearch:\", Config.sample_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3d31743",
+   "metadata": {},
+   "source": [
+    "## Gridsearch SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "65136c04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Gridsearch for SVM is performed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if Gridsearch_SVM == True:\n",
+    "    svm_model = SVC()\n",
+    "    params = {'C': [1, 10, 100], 'kernel': [ 'linear','rbf']}\n",
+    "    grid_search = GridSearchCV(estimator=svm_model, param_grid=params, verbose=3, cv=5, n_jobs=-1)\n",
+    "    grid_search.fit(train, train_target)\n",
+    "    print(\"Best parameters:\", grid_search.best_params_)\n",
+    "    y_pred = grid_search.predict(test)\n",
+    "    print(pd.crosstab(test_target, y_pred, rownames=['Class Actual'], colnames=['Class Predict']))\n",
+    "    print(classification_report(test_target, y_pred))\n",
+    "\n",
+    "    print(\"Accuracy Score on Test Set: \", grid_search.score(test, test_target))\n",
+    "    model_filename = f\"SVM_Optimized_Model_with_Gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"SVM_Optimized_Model_with_Gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    # Saving the best model and the associated classification report\n",
+    "    save_model_and_report(grid_search.best_estimator_, classification_report(test_target, y_pred), model_filename, report_filename)\n",
+    "\n",
+    "else:\n",
+    "    print(\"No Gridsearch for SVM is performed.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43d69c6d",
+   "metadata": {},
+   "source": [
+    "## Gridsearch KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "fd03d625",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Gridsearch for KNN is performed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if Gridsearch_KNN == True:\n",
+    "    knn = neighbors.KNeighborsClassifier(n_jobs=-1)\n",
+    "    param_knn = {'metric': ['manhattan'],'n_neighbors': [1]} #,'minkowski','chebyshev','euclidean' // k for  k in range(1, 7)\n",
+    "    grid=GridSearchCV(estimator=knn,param_grid=param_knn,verbose=3, cv=5 , scoring='accuracy', n_jobs=-1)\n",
+    "    grid.fit(train,train_target)\n",
+    "    print(pd.DataFrame(grid.cv_results_)[['params', 'mean_test_score', 'std_test_score']])\n",
+    "\n",
+    "    print('Best Metric:', grid.best_estimator_.get_params()['metric'])\n",
+    "    print('Best K:', grid.best_estimator_.get_params()['n_neighbors'])\n",
+    "\n",
+    "    y_pred=grid.predict(test)\n",
+    "    print(pd.crosstab(test_target,y_pred,rownames=['Class Actual'],colnames=['Class Predict']))\n",
+    "    print(classification_report(test_target,y_pred))\n",
+    "\n",
+    "\n",
+    "    print(\"Accuracy Score on Test Set: \", grid.score(test, test_target))\n",
+    "    model_filename = f\"KNN_Optimized_Model_with_Gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"KNN_Optimized_Model_with_Gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    #saving the best model and the associated classification report\n",
+    "    save_model_and_report(grid.best_estimator_, classification_report(test_target, y_pred), model_filename, report_filename)\n",
+    "else:\n",
+    "    print(\"No Gridsearch for KNN is performed.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "978005a7",
+   "metadata": {},
+   "source": [
+    "## Gridsearch DTC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f6c40a75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Gridsearch for DTC is performed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if Gridsearch_DTC == True:\n",
+    "    dt=DecisionTreeClassifier()\n",
+    "    param_dt={'criterion': ['entropy'],   'max_depth': [12]} # 'gini', // 2,4,6,8,10,\n",
+    "    grid=GridSearchCV(estimator=dt,param_grid=param_dt, verbose=3, cv=5 , scoring='accuracy', n_jobs=-1)\n",
+    "    grid.fit(train, train_target)\n",
+    "    pd.DataFrame(grid.cv_results_)[['params', 'mean_test_score', 'std_test_score']]\n",
+    "\n",
+    "    print('Best Metric:', grid.best_estimator_.get_params()['criterion'])\n",
+    "    print('Best Depth:', grid.best_estimator_.get_params()['max_depth'])\n",
+    "\n",
+    "    y_pred=grid.predict(test)\n",
+    "    print(pd.crosstab(test_target,y_pred,rownames=['Class Actual'],colnames=['Class Predict']))\n",
+    "    print(classification_report(test_target,y_pred))\n",
+    "\n",
+    "    print(\"Accuracy Score on Test Set: \", grid.score(test, test_target))\n",
+    "    model_filename = f\"DTC_Optimized_Model_with_Gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"DTC_Optimized_Model_with_Gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    #saving the best model and the associated classification report\n",
+    "    save_model_and_report(grid.best_estimator_, classification_report(test_target, y_pred), model_filename, report_filename)\n",
+    "else:\n",
+    "    print(\"No Gridsearch for DTC is performed.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb03bcd0",
+   "metadata": {},
+   "source": [
+    "## Gridsearch RFC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "39408a17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Gridsearch for RFC is performed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if Gridsearch_RFC == True:\n",
+    "    param_grid = {\n",
+    "        'n_estimators': [200],  #50, 100, \n",
+    "        'criterion': ['entropy'], #'gini',\n",
+    "        'max_depth': [None], #, 10, 20\n",
+    "        'min_samples_split': [2], #, 5 \n",
+    "        'min_samples_leaf': [1], #, 2, 4 \n",
+    "        'max_features': ['sqrt'] #, 'log2'    \n",
+    "    }\n",
+    "    rfc_grid = RandomForestClassifier(n_jobs=-1)\n",
+    "    grid_search = GridSearchCV(estimator = rfc_grid, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs = -1, verbose=3)\n",
+    "    grid_search.fit(train, train_target)\n",
+    "    print(\"Best parameters:\", grid_search.best_params_)\n",
+    "    y_pred=grid_search.predict(test)\n",
+    "    print(pd.crosstab(test_target,y_pred,rownames=['Class Actual'],colnames=['Class Predict']))\n",
+    "    print(classification_report(test_target,y_pred))\n",
+    "\n",
+    "    print(\"Accuracy Score on Test Set: \", grid_search.score(test, test_target))\n",
+    "    model_filename = f\"RFC_Optimized_Model_with_Gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"RFC_Optimized_Model_with_Gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    #saving the best model and the associated classification report\n",
+    "    save_model_and_report(grid_search.best_estimator_, classification_report(test_target, y_pred), model_filename, report_filename)\n",
+    "\n",
+    "else:\n",
+    "    print(\"No Gridsearch for RFC is performed.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "de5f37cc",
+   "metadata": {},
+   "source": [
+    "## Gridsearch XGB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a72bee7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Gridsearch for XBG is performed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if Gridsearch_XGB == True:\n",
+    "    xgb_model = xgb.XGBClassifier(\n",
+    "        objective='binary:logistic',  # for binary classification\n",
+    "        n_jobs=-1,\n",
+    "        #max_depth=10,\n",
+    "        #learning_rate=0.01,\n",
+    "        #n_estimators=100\n",
+    "    )\n",
+    "    params={'max_depth':[50], 'n_estimators':[2000], 'learning_rate': [0.2]} #1500, 2000, 2500 // 0.1, 0.2, 0.5\n",
+    "    grid_search = GridSearchCV(estimator=xgb_model,param_grid=params, verbose=3, cv=5, n_jobs=-1)\n",
+    "    grid_search.fit(train, train_target)\n",
+    "    print(\"Best parameters:\", grid_search.best_params_)\n",
+    "    y_pred=grid_search.predict(test)\n",
+    "    print(pd.crosstab(test_target,y_pred,rownames=['Class Actual'],colnames=['Class Predict']))\n",
+    "    print(classification_report(test_target,y_pred))\n",
+    "\n",
+    "    print(\"Accuracy Score on Test Set: \", grid_search.score(test, test_target))\n",
+    "    model_filename = f\"XGB_Optimized_Model_with_Gridsearch_{Config.sample_name}.pkl\"\n",
+    "    report_filename = f\"XGB_Optimized_Model_with_Gridsearch_{Config.sample_name}_classification_report.txt\"\n",
+    "    #saving the best model and the associated classification report\n",
+    "    save_model_and_report(grid_search.best_estimator_, classification_report(test_target, y_pred), model_filename, report_filename)\n",
+    "\n",
+    "else:\n",
+    "    print(\"No Gridsearch for XBG is performed.\")"
    ]
   }
  ],
