Notebooks 2a and 2b finalized. No more gridsearches are needed.

--- a/notebooks/2b_MLmodels_PTBDB.ipynb
+++ b/notebooks/2b_MLmodels_PTBDB.ipynb
@@ -659,7 +659,7 @@
    "source": [
     "if Gridsearch_KNN == True:\n",
     "    knn = neighbors.KNeighborsClassifier(n_jobs=-1)\n",
-    "    param_knn = {'metric': ['manhattan'],'n_neighbors': [1]} #,'minkowski','chebyshev','euclidean' // k for  k in range(1, 7)\n",
+    "    param_knn = {'metric': ['manhattan','minkowski','chebyshev','euclidean'],'n_neighbors': [k for  k in range(1, 7)]}\n",
     "    grid=GridSearchCV(estimator=knn,param_grid=param_knn,verbose=3, cv=5 , scoring='accuracy', n_jobs=-1)\n",
     "    grid.fit(train,train_target)\n",
     "    print(pd.DataFrame(grid.cv_results_)[['params', 'mean_test_score', 'std_test_score']])\n",
@@ -706,7 +706,7 @@
    "source": [
     "if Gridsearch_DTC == True:\n",
     "    dt=DecisionTreeClassifier()\n",
-    "    param_dt={'criterion': ['entropy'],   'max_depth': [12]} # 'gini', // 2,4,6,8,10,\n",
+    "    param_dt={'criterion': ['gini', 'entropy'],   'max_depth': [2,4,6,8,10,12]} \n",
     "    grid=GridSearchCV(estimator=dt,param_grid=param_dt, verbose=3, cv=5 , scoring='accuracy', n_jobs=-1)\n",
     "    grid.fit(train, train_target)\n",
     "    pd.DataFrame(grid.cv_results_)[['params', 'mean_test_score', 'std_test_score']]\n",
@@ -752,12 +752,12 @@
    "source": [
     "if Gridsearch_RFC == True:\n",
     "    param_grid = {\n",
-    "        'n_estimators': [200],  #50, 100, \n",
-    "        'criterion': ['entropy'], #'gini',\n",
-    "        'max_depth': [None], #, 10, 20\n",
-    "        'min_samples_split': [2], #, 5 \n",
-    "        'min_samples_leaf': [1], #, 2, 4 \n",
-    "        'max_features': ['sqrt'] #, 'log2'    \n",
+    "        'n_estimators': [50, 100, 200],  \n",
+    "        'criterion': ['gini', 'entropy'],\n",
+    "        'max_depth': [None, 10, 20],\n",
+    "        'min_samples_split': [2, 5], \n",
+    "        'min_samples_leaf': [1, 2, 4], \n",
+    "        'max_features': ['sqrt', 'log2']    \n",
     "    }\n",
     "    rfc_grid = RandomForestClassifier(n_jobs=-1)\n",
     "    grid_search = GridSearchCV(estimator = rfc_grid, param_grid=param_grid, cv=5, scoring='accuracy', n_jobs = -1, verbose=3)\n",
@@ -808,7 +808,7 @@
     "        #learning_rate=0.01,\n",
     "        #n_estimators=100\n",
     "    )\n",
-    "    params={'max_depth':[50], 'n_estimators':[2000], 'learning_rate': [0.2]} #1500, 2000, 2500 // 0.1, 0.2, 0.5\n",
+    "    params={'max_depth':[50], 'n_estimators':[1500, 2000, 2500], 'learning_rate': [ 0.1, 0.2, 0.5]}\n",
     "    grid_search = GridSearchCV(estimator=xgb_model,param_grid=params, verbose=3, cv=5, n_jobs=-1)\n",
     "    grid_search.fit(train, train_target)\n",
     "    print(\"Best parameters:\", grid_search.best_params_)\n",
