--- a/notebooks/2b_MLmodels_PTBDB.ipynb
+++ b/notebooks/2b_MLmodels_PTBDB.ipynb
@@ -57,9 +57,8 @@
     }
    ],
    "source": [
-    "## Test cell for simon: Using Kaggle API to download the datasets indepent of github and its filesize limitations. Storing it in folder located outside of the repo.\n",
-    "# If this works, all filepaths have to be adjusted in all notebooks to make use of the downloaded datasets.\n",
-    "#RUN THIS CELL ONLY ONCE FOR ALL NOTEBOOKS!\n",
+    "#In this cell, the datasets are downloaded via the KaggleAPI directly from the source. It might be necessary to authentificate first via Webbrowser to make this work.\n",
+    "#FUrthermore, a folder ../data is created, which is on the .gitignore list. In this folder, large files >100mb and the original datasets MITBIH and PTBDB are stored.\n",
     "\n",
     "from kaggle.api.kaggle_api_extended import KaggleApi\n",
     "\n",
