--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "id": "96a6a1e1",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "id": "c3a84163",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "id": "06073fe3",
    "metadata": {
     "execution": {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "id": "71a126b0",
    "metadata": {
     "execution": {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 13,
    "id": "f3cbb4eb",
    "metadata": {
     "execution": {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "045ff622",
    "metadata": {
     "execution": {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "id": "303ceae0",
    "metadata": {
     "execution": {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "12e9d176",
    "metadata": {},
    "outputs": [],
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "id": "140181b5",
    "metadata": {
     "execution": {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "3784bfce",
    "metadata": {
     "execution": {
@@ -436,7 +436,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN Model without gridsearch is not trained.\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0     0.9777    0.9946    0.9861     18118\n",
+      "         1.0     0.8970    0.6421    0.7484       556\n",
+      "         2.0     0.9395    0.9012    0.9200      1448\n",
+      "         3.0     0.7630    0.6358    0.6936       162\n",
+      "         4.0     0.9941    0.9509    0.9720      1608\n",
+      "\n",
+      "    accuracy                         0.9736     21892\n",
+      "   macro avg     0.9143    0.8249    0.8640     21892\n",
+      "weighted avg     0.9727    0.9736    0.9725     21892\n",
+      "\n",
+      "The model was saved as KNN_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
+      "Model file size is too big. Changing save path...\n",
+      "Model moved to ../data/models_too_big_for_git due to its size.\n",
+      "The classification report was saved as KNN_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -970,7 +985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0rc1"
   },
   "papermill": {
    "default_parameters": {},
